<resources>
    <string name="app_name">CC</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">date : </string>
    <string name="type">type : </string>
    <string name="before">before : </string>
    <string name="after">after : </string>

    <!-- Filter options -->
    <string name="filter_success">Success</string>
    <string name="filter_amount">Amount</string>
    <string name="filter_date">Date</string>
    <string name="filter_date_sorts">Date Sort</string>

    <!-- Other -->
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>

    <!-- Notification -->
    <string name="btn1_description">Start foreground service</string>
    <string name="btn1_title" >Start</string>
    <string name="simple_service_title">Simple Service</string>
    <string name="simple_service_desc">Simple Service from the OTest app</string>

    <string name="main_create_noti2_btn">Send</string>

    <string name="btnA_title">Go to Settings</string>
    <string name="noti_channel_default">Primary Channel</string>
    <string name="noti1_title">Notification 1 Title</string>
    <string name="primary1_body">The content</string>
    <string name="noti2_title">Second notification</string>
    <string name="secondary1_body">Notification body text.</string>
    <string name="noti_channel_second">Secondary Channel</string>

    <string name="main_primary_title">Primary Channel</string>
    <string name="main_primary_send1">Send 1</string>
    <string name="main_primary_send2">Send 2</string>
    <string name="main_primary_config">Go to primary settings</string>

    <string name="main_secondary_title">Secondary Channel</string>
    <string name="main_secondary_send1">Send 1</string>
    <string name="main_secondary_send2">Send 2</string>
    <string name="main_secondary_config">Go to secondary settings</string>
    <string name="primary2_body">Second Notification for Primary Channel</string>
    <string name="secondary2_body">Second Notification for Secondary Channel</string>

    <!-- Spinner Adapter Success -->
    <string-array name="planets_array">
        <item>None</item>
        <item>True</item>
        <item>False</item>
    </string-array>
    <!-- Spinner Adapter Date -->
    <string-array name="planets_array_date">
        <item>None</item>
        <item>Asc</item>
        <item>Desc</item>
    </string-array>

</resources>
