<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <TextView
           android:textStyle="italic"
           android:textColor="@color/cc"
           android:textSize="20sp"
           android:text="@string/filter_success"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:textColor="@color/cc"
            android:textSize="20sp"
            android:text="@string/filter_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:textColor="@color/cc"
            android:textSize="20sp"
            android:text="@string/filter_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:textColor="@color/cc"
            android:textSize="20sp"
            android:text="@string/filter_date_sorts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
          <FrameLayout
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
              <TextView
                  android:textColor="@color/action_bar"
                  android:textStyle="bold"
                  android:textSize="20dp"
                  android:text="@string/cancel"
                  android:id="@+id/cancel_dialogID"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="bottom|end"
                  android:layout_margin="@dimen/fab_margin" />
              <TextView
                  android:textColor="@color/action_bar"
                  android:textStyle="bold"
                  android:textSize="20dp"
                  android:text="@string/apply"
                  android:id="@+id/apply_dialogID"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_margin="@dimen/fab_margin" />
          </FrameLayout>

    </LinearLayout>


</RelativeLayout>